--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,12 +1,20 @@
 <html>
   <head>
-    <title>A-Frame Example Component - Basic</title>
+    <title>A-Frame Crease Component - Basic</title>
     <script src="../build.js"></script>
   </head>
   <body>
-    <a-scene>
-      <a-assets></a-assets>
-      <a-entity geometry="primitive: box" material="color: #C03546"></a-entity>
+    <a-scene stats>
+			<a-light type='directional' intensity='0.5' position='1 1 1'></a-light>
+      <a-entity geometry="primitive: box" crease position="-4.5 0 0"></a-entity>
+      <a-entity geometry="primitive: circle" crease position="-1.5 0 0"></a-entity>
+      <a-entity geometry="primitive: cylinder" crease material='' position="1.5 0 0"></a-entity>
+      <a-entity geometry="primitive: plane" crease position="4.5 0 0"></a-entity>
+
+      <a-entity geometry="primitive: ring" crease material='' position="-4.5 3 0"></a-entity>
+      <a-entity geometry="primitive: sphere" crease material position="-1.5 3 0"></a-entity>
+      <a-entity geometry="primitive: torus" crease material position="1.5 3 0"></a-entity>
+      <a-entity geometry="primitive: torusKnot" material position="4.5 3 0"></a-entity>
     </a-scene>
   </body>
 </html>
