--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <h1>A-Frame Example Component</h1>
+    <h1>A-Frame Crease Component</h1>
     <a href="basic/index.html">Basic</a>
 
     <div class="github-fork-ribbon-wrapper right">
